# mail2md-computer-use

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: claim_matrix.md  release_truthfulness_checklist.md  truthful-build-doctrine.md
scripts/: check_truthfulness.py  truthfulness.sh
src/mail2md/: __init__.py  browser_agent.py  cli.py  converter.py  models.py  parsers.py  render.py
tests/: test_browser_policy.py  test_conversion.py
tests/fixtures/: sample.eml
